cdk.out.dev/MTI-dev-NetworkStack.template.json
{
 "Description": "[dev] MTI ビデオシステム - ネットワーク基盤スタック",
 "Resources": {
  "Vpc": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "MTI-VideoSystem-dev-vpc"
     },
     {
      "Key": "Project",
      "Value": "MTI-VideoSystem"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MTI-dev-NetworkStack/Vpc"
   }
  },
  "PublicSubnet1a": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-northeast-1a",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "MTI-VideoSystem-dev-public-subnet-1a"
     },
     {
      "Key": "Project",
      "Value": "MTI-VideoSystem"
     }
    ],
    "VpcId": {
     "Ref": "Vpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-dev-NetworkStack/PublicSubnet1a"
   }
  },
  "PublicSubnet1c": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-northeast-1c",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "MTI-VideoSystem-dev-public-subnet-1c"
     },
     {
      "Key": "Project",
      "Value": "MTI-VideoSystem"
     }
    ],
    "VpcId": {
     "Ref": "Vpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-dev-NetworkStack/PublicSubnet1c"
   }
  },
  "PrivateSubnet1a": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-northeast-1a",
    "CidrBlock": "10.0.11.0/24",
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "MTI-VideoSystem-dev-private-subnet-1a"
     },
     {
      "Key": "Project",
      "Value": "MTI-VideoSystem"
     }
    ],
    "VpcId": {
     "Ref": "Vpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-dev-NetworkStack/PrivateSubnet1a"
   }
  },
  "PrivateSubnet1c": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-northeast-1c",
    "CidrBlock": "10.0.12.0/24",
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "MTI-VideoSystem-dev-private-subnet-1c"
     },
     {
      "Key": "Project",
      "Value": "MTI-VideoSystem"
     }
    ],
    "VpcId": {
     "Ref": "Vpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-dev-NetworkStack/PrivateSubnet1c"
   }
  },
  "DbSubnet1a": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-northeast-1a",
    "CidrBlock": "10.0.21.0/24",
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "MTI-VideoSystem-dev-db-subnet-1a"
     },
     {
      "Key": "Project",
      "Value": "MTI-VideoSystem"
     }
    ],
    "VpcId": {
     "Ref": "Vpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-dev-NetworkStack/DbSubnet1a"
   }
  },
  "DbSubnet1c": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-northeast-1c",
    "CidrBlock": "10.0.22.0/24",
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "MTI-VideoSystem-dev-db-subnet-1c"
     },
     {
      "Key": "Project",
      "Value": "MTI-VideoSystem"
     }
    ],
    "VpcId": {
     "Ref": "Vpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-dev-NetworkStack/DbSubnet1c"
   }
  },
  "Igw": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "MTI-VideoSystem-dev-igw"
     },
     {
      "Key": "Project",
      "Value": "MTI-VideoSystem"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MTI-dev-NetworkStack/Igw"
   }
  },
  "IgwAttachment": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "Igw"
    },
    "VpcId": {
     "Ref": "Vpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-dev-NetworkStack/IgwAttachment"
   }
  },
  "RegionalNatGateway": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AvailabilityMode": "regional",
    "ConnectivityType": "public",
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "MTI-VideoSystem-dev-regional-nat-gw"
     },
     {
      "Key": "Project",
      "Value": "MTI-VideoSystem"
     }
    ],
    "VpcId": {
     "Ref": "Vpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-dev-NetworkStack/RegionalNatGateway"
   }
  },
  "PublicRouteTable": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "MTI-VideoSystem-dev-public-rtb"
     },
     {
      "Key": "Project",
      "Value": "MTI-VideoSystem"
     }
    ],
    "VpcId": {
     "Ref": "Vpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-dev-NetworkStack/PublicRouteTable"
   }
  },
  "PublicDefaultRoute": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "Igw"
    },
    "RouteTableId": {
     "Ref": "PublicRouteTable"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-dev-NetworkStack/PublicDefaultRoute"
   }
  },
  "PublicSubnet1aRta": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PublicRouteTable"
    },
    "SubnetId": {
     "Ref": "PublicSubnet1a"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-dev-NetworkStack/PublicSubnet1aRta"
   }
  },
  "PublicSubnet1cRta": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PublicRouteTable"
    },
    "SubnetId": {
     "Ref": "PublicSubnet1c"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-dev-NetworkStack/PublicSubnet1cRta"
   }
  },
  "PrivateRouteTable": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "MTI-VideoSystem-dev-private-rtb"
     },
     {
      "Key": "Project",
      "Value": "MTI-VideoSystem"
     }
    ],
    "VpcId": {
     "Ref": "Vpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-dev-NetworkStack/PrivateRouteTable"
   }
  },
  "PrivateDefaultRoute": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "RegionalNatGateway"
    },
    "RouteTableId": {
     "Ref": "PrivateRouteTable"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-dev-NetworkStack/PrivateDefaultRoute"
   }
  },
  "PrivateSubnet1aRta": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PrivateRouteTable"
    },
    "SubnetId": {
     "Ref": "PrivateSubnet1a"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-dev-NetworkStack/PrivateSubnet1aRta"
   }
  },
  "PrivateSubnet1cRta": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PrivateRouteTable"
    },
    "SubnetId": {
     "Ref": "PrivateSubnet1c"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-dev-NetworkStack/PrivateSubnet1cRta"
   }
  },
  "DbRouteTable": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "MTI-VideoSystem-dev-db-rtb"
     },
     {
      "Key": "Project",
      "Value": "MTI-VideoSystem"
     }
    ],
    "VpcId": {
     "Ref": "Vpc"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-dev-NetworkStack/DbRouteTable"
   }
  },
  "DbSubnet1aRta": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "DbRouteTable"
    },
    "SubnetId": {
     "Ref": "DbSubnet1a"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-dev-NetworkStack/DbSubnet1aRta"
   }
  },
  "DbSubnet1cRta": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "DbRouteTable"
    },
    "SubnetId": {
     "Ref": "DbSubnet1c"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MTI-dev-NetworkStack/DbSubnet1cRta"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/02MTQuCQBRFf4v78aVDuBcX0SZCo208xyeNH2/AeSYh/vcoI1vde7iHq0EnMUQBTj40VRt2toS5EDStwsnfyGiYs5qv50xlNRdjySTvdmShgUkOKDThU63Ol1IRNPee+KOe8N/K3Sh0wbKjH23P25h674xFsY4XlZN342BoUewqgsbvHnoPcQJR0Hhrw2FksT1BvuYLQPR7AtQAAAA="
   },
   "Metadata": {
    "aws:cdk:path": "MTI-dev-NetworkStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "ExportsOutputRefVpc0040386A": {
   "Value": {
    "Ref": "Vpc"
   },
   "Export": {
    "Name": "MTI-dev-NetworkStack:ExportsOutputRefVpc0040386A"
   }
  },
  "ExportsOutputRefDbSubnet1a4E62FE79": {
   "Value": {
    "Ref": "DbSubnet1a"
   },
   "Export": {
    "Name": "MTI-dev-NetworkStack:ExportsOutputRefDbSubnet1a4E62FE79"
   }
  },
  "ExportsOutputRefDbSubnet1cEEE0C4A4": {
   "Value": {
    "Ref": "DbSubnet1c"
   },
   "Export": {
    "Name": "MTI-dev-NetworkStack:ExportsOutputRefDbSubnet1cEEE0C4A4"
   }
  },
  "ExportsOutputRefPublicSubnet1a1DA531A5": {
   "Value": {
    "Ref": "PublicSubnet1a"
   },
   "Export": {
    "Name": "MTI-dev-NetworkStack:ExportsOutputRefPublicSubnet1a1DA531A5"
   }
  },
  "ExportsOutputRefPublicSubnet1c732EA97F": {
   "Value": {
    "Ref": "PublicSubnet1c"
   },
   "Export": {
    "Name": "MTI-dev-NetworkStack:ExportsOutputRefPublicSubnet1c732EA97F"
   }
  },
  "ExportsOutputRefPrivateSubnet1a21647B63": {
   "Value": {
    "Ref": "PrivateSubnet1a"
   },
   "Export": {
    "Name": "MTI-dev-NetworkStack:ExportsOutputRefPrivateSubnet1a21647B63"
   }
  },
  "ExportsOutputRefPrivateSubnet1c0B9AC203": {
   "Value": {
    "Ref": "PrivateSubnet1c"
   },
   "Export": {
    "Name": "MTI-dev-NetworkStack:ExportsOutputRefPrivateSubnet1c0B9AC203"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
